# ComputerScienceThesis

./: .gitignore  .pdm.toml  Database.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.VSCodeCounter/2022-05-10_14-42-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-05-10_14-43-59/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Backup/Code/: alembic.ini  docker-compose.yml
Backup/src/: Dockerfile  requirements.txt
Backup/template/: base copy.html  editpwd copy.html  score.html  student.html  users.html
Code/: .gitignore  requirements.txt
Code/xuemc_win/: Dockerfile  gunicorn_config.py  main.py  requirements.txt  run.py
back/: Dockerfile  jingshijiaoyu.sql  run.py
back/App/: __init__.py
src/: DataBase.sql  Database.py  Dockerfile  requirements.txt  run.py  test.py  test.txt
src/App/: __init__.py
src/数据库-sql/: main_admin.sql  main_announcement.sql  main_class.sql  main_department.sql  main_score.sql  main_student.sql  main_teacher.sql  main_type.sql
sudathesis-bachelor-main/sudathesis-bachelor-main/: README.md
undergraduate-1.01/: abstract.tex  acknowlegements.tex  main.tex  mainbody.tex  tex.tex
论文/: ~$日常论文模板.docx  中期答辩.pptx  备份属于 外文文献翻译.wbk  备份属于 外文文献翻译中文.wbk  备份属于 日常论文模板.wbk  外文文献翻译中文.docx  外文文献翻译原文.docx  提交给老师的提纲文献.docx  文献综述.docx  文献综述参考论文.docx  日常论文模板.docx  标准论文模板.docx  苏州大学本科生毕业设计.docx  项目照片展示.docx
论文/毕业设计要求与样例/: 关于印发《苏州大学本科生毕业设计（论文）工作办法》的通知.doc  (+2 more)
论文排版及相关要求/: 本科毕业设计（论文）封面-word版本.doc
(+160 files in other folders)
