[project]
name = "ComputerScienceThesis"
version = "0.1.0"
description = ""
authors = [
    {name = "shadowofgost", email = "shadowofgost@outlook.com"},
]
license-expression = "MIT"
dependencies = []
requires-python = ">=3.9"

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
